# Joint_Save

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: e2e.yml
docs/: logo-links-verified.md
frontend/: .gitignore  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: web3-provider.tsx
frontend/components/create-group/: BulkImport.tsx  flexible-form.tsx  rotational-form.tsx  target-form.tsx
frontend/components/dashboard/: dashboard-header.tsx  dashboard-tabs.tsx  my-groups.tsx  profile.tsx
frontend/components/group/: group-actions.tsx  group-activity.tsx  group-details.tsx  group-members.tsx  yield-dashboard.tsx
frontend/components/landing/: header.tsx
frontend/components/ui/: theme-toggle.tsx
frontend/e2e/: README.md  create-pool.spec.ts  deposit-flow.spec.ts  navigation.spec.ts  responsive.spec.ts  wallet-connection.spec.ts
frontend/e2e/fixtures/: constants.ts  mock-pools.ts  test-base.ts  wallet.ts
frontend/hooks/: use-keyboard-shortcuts.test.ts  use-keyboard-shortcuts.ts  useJointSaveContracts.ts  useNotifications.ts  useTheme.ts  useUserProfile.ts
frontend/lib/: env.ts  supabase.ts  utils.ts
frontend/utils/: stellarAddress.ts
smartcontract/: README.md
smartcontract/contracts/rotational/: Cargo.toml
smartcontract/contracts/rotational/src/: fuzz_tests.rs  lib.rs  tests.rs
supabase/migrations/: 20260622000000_notifications_schema.sql  20260623000000_deposit_reminders.sql
(+6 files in other folders)
